--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "datepicker": "0.0.0",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "joi": "^10.0.6",
     "knex": "^0.12.6",
+    "method-override": "^2.3.7",
+    "moment": "^2.17.1",
     "morgan": "~1.7.0",
-    "pg": "^6.1.1",
-    "serve-favicon": "~2.3.0"
+    "pg": "^6.1.2",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.8"
   }
 }
