--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "datepicker": "0.0.0",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "joi": "^10.0.6",
